- Write hostname in system file /etc/myname
- Implement ip name-server to set the main ns for the router
- Implement no access-list <name> with proper memory handling
- Proper memory handling for no ip route

Alpha 0.15
- Check integrity of the configuration files
- Move execSystemCommand to sysunix.h
- Little improvement to reset prompt color
- Refund the prints when the daemon starts

Alpha 0.16
- Remove direction param from access_control structure
- Little change for checkSystemIntegrity()
- Implement removing special ACLs from an access-list
- Improve code performance for adding acl
- Implement no ip access-group <name> in/out

Alpha 0.17
- Implement nameserver configuration (ip name-server and ip domain-name)
- Also implement linked no commands
- Init empty buffer for execSystemCommand
- Also fix the major bug into client. Some buffers are not initialized empty => Buffer overflow

Alpha 0.18
- Fix all buffer overflows
- Don't add interface if it already exists
- Create bridge for VLAN, prepare 802.1Q
- Prepare RIP routing
- Move iprouting & mcastrouting to route.h
- Move main route pointer to route.h
- Also initialise mcastrouting
- Use termios with getchar input
- Prepare handler for ? and tab chars
- Remove ncurses includes
- Create source files for dynamic routing

Alpha 0.19
- Rename Config vars from confRIPCmd to confRouterCmd
- Added no router rip command
- Implement redistribute static, connected, default for RIP
- Implement default-information originate (eq. redistribute default)
- Implement (no) split-horizon to disable split-horizon for RIP (dangerous !)
- Before check integrity, copy resolv.conf.save into resolv.conf

Alpha 0.20 - prev
- Bug & Crash fix when reading command in the shell. Forget to check if offset is positive.
- Start & restart rip daemon when modifying router rip config
- Implement passive-interface for RIP
- Implement cost <interface> <1-16> for RIP (eq to offset-list on CISCO routers)