@@ -36,7 +36,7 @@
 /* timers */
 #define	DEFAULT_KEEPALIVE		30
 #define	OFFSET				10
-#define	DEFAULT_FAILED_NBR_TIMEOUT	86400
+#define	DEFAULT_FAILED_NBR_TIMEOUT	240
 
 #define MAX_RIP_ENTRIES		25
 
