@@ -146,6 +146,8 @@ unsigned short initCmds()
 	confRouterCmd[4].handler = crouterCMD_RIP_passive;
 	confRouterCmd[5].name = "cost";
 	confRouterCmd[5].handler = crouterCMD_RIP_cost;
+	confRouterCmd[6].name = "timer";
+	confRouterCmd[6].handler = crouterCMD_RIP_timer;
 
 	// Enable - Configure - Router No Commands
 	noconfRouterCmd[0].name = "redistribute";
@@ -157,7 +159,9 @@ unsigned short initCmds()
 	noconfRouterCmd[3].name = "passive-interface";
 	noconfRouterCmd[3].handler = crouterCMD_RIP_nopassive;
 	noconfRouterCmd[4].name = "cost";
-	noconfRouterCmd[4].handler = crouterCMD_RIP_nocost; // Same as no cost
+	noconfRouterCmd[4].handler = crouterCMD_RIP_nocost;
+	noconfRouterCmd[5].name = "timer";
+	noconfRouterCmd[5].handler = crouterCMD_RIP_notimer;
 
 	masterCmd[0] = userCmd;
 	masterCmd[1] = enableCmd;
