@@ -60,5 +60,8 @@ unsigned short rip_redistrib_static;
 unsigned short rip_redistrib_conn;
 unsigned short rip_redistrib_default;
 unsigned short rip_split_horizon;
+unsigned int rip_update_timer;
+unsigned int rip_invalid_timer;
+unsigned int rip_destroy_timer;
 
 #endif
